@@ -1,7 +1,11 @@
 # ChangeLog for catalyst
-# Copyright 1999-2010 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
+# Copyright 1999-2011 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
 # Distributed under the GPL v2
 # $Id$
+
+  05 Feb 2011; Raúl Porcel <armin76@gentoo.org>
+  modules/catalyst/arch/amd64.py:
+  Enable new amd64 subarches
 
   01 Nov 2010; Raúl Porcel <armin76@gentoo.org>
   modules/catalyst/arch/mips.py:
